[4069] product name and cross sign alignment fix

--- a/packages/scandipwa/src/component/WishlistItem/WishlistItem.style.scss
+++ b/packages/scandipwa/src/component/WishlistItem/WishlistItem.style.scss
@@ -166,6 +166,7 @@
         @include mobile {
             inset-block-start: -4px;
             inset-inline-end: -4px;
+            margin-block-start: -4px;
 
             .CloseIcon {
                 width: 24px;
